objects/Fulfillment_Item__c.object
<CustomObject>
    <description>This object will hold the fulfillment information information for Training and Products. The data in this object is used to create CC Invoice Item records.</description>
    <fields>
        <fullName>AP_Code__c</fullName>
        <formula>TEXT(CC_Product__r.AP_Code__c)</formula>
        <label>AP Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Category_Name__c</fullName>
        <description>CC Category Name</description>
        <formula>CC_Product__r.CC_Category__r.Name</formula>
        <label>CC Category Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FCC__c</fullName>
        <description>CC Product FCC</description>
        <formula>TEXT(CC_Product__r.FCC__c)</formula>
        <label>FCC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Date__c</fullName>
        <description>Date when the Fulfillment Item is set to Complete</description>
        <inlineHelpText>Date when the Fulfillment Item is set to Complete</inlineHelpText>
        <label>Fulfillment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Item_Total__c</fullName>
        <description>Order Item Price * Fulfillment Item Quantity</description>
        <formula>Order_Item__r.ccrz__Price__c  *  Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Item Price * Fulfillment Item Quantity</inlineHelpText>
        <label>Fulfillment Item Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <description>Parent record</description>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ILT_Class__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Class being fulfilled</description>
        <label>ILT Class</label>
        <referenceTo>redwing__ILT_Class__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order Item being fulfilled</description>
        <label>Order Item</label>
        <referenceTo>ccrz__E_OrderItem__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Order to be fulfilled</description>
        <label>Order</label>
        <referenceTo>ccrz__E_Order__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Category__c</fullName>
        <description>This field holds the payment category for the transaction based on existing business rules</description>
        <label>Payment Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_SKU__c</fullName>
        <description>CC Product SKU</description>
        <formula>CC_Product__r.ccrz__SKU__c</formula>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the fulfillment item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplemental_Information__c</fullName>
        <description>Supplemental Information used to print on Invoice</description>
        <label>Supplemental Information</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training Event being fulfilled</description>
        <label>Training Event</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Fulfillment Items</relationshipLabel>
        <relationshipName>Fulfillment_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>This field holds the date the item is ready for invoicing. Used to create CFS file.</description>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of item being fulfilled</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training</fullName>
                    <default>true</default>
                    <label>Training</label>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>This field holds the unit code for the transaction based on existing business rules</description>
        <label>Unit Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Fulfillment Item</label>
    <nameField>
        <displayFormat>FI-{0000000}</displayFormat>
        <label>Fulfillment Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>